--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="La palette du goût"
               />
-              <div class="restaurant-card__image--markernew">
+              <div class="restaurant-card__image--new">
                 <p>Nouveau</p>
               </div>
             </div>
@@ -98,6 +98,7 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
+              <i class="fas fa-heart"></i>
               <i class="far fa-heart"></i>
             </button>
           </div>
@@ -109,7 +110,7 @@
                 src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="La note enchantée"
               />
-              <div class="restaurant-card__image--markernew">
+              <div class="restaurant-card__image--new">
                 <p>Nouveau</p>
               </div>
             </div>
@@ -143,7 +144,7 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="far fa-heart"></i>
+              <i class="far fa-heart fas fa-heart"></i>
             </button>
           </div>
         </article>
