add scss categories & html menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       src="https://kit.fontawesome.com/df053594e0.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/styleindex.css" />
   </head>
 
   <body>
@@ -98,8 +98,8 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="fas fa-heart"></i>
-              <i class="far fa-heart"></i>
+              <i class="fas fa-heart animheartsolid"></i>
+              <i class="far fa-heart animheartregular"></i>
             </button>
           </div>
         </article>
@@ -123,7 +123,8 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="far fa-heart"></i>
+              <i class="fas fa-heart animheartsolid"></i>
+              <i class="far fa-heart animheartregular"></i>
             </button>
           </div>
         </article>
@@ -144,7 +145,8 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="far fa-heart fas fa-heart"></i>
+              <i class="fas fa-heart animheartsolid"></i>
+              <i class="far fa-heart animheartregular"></i>
             </button>
           </div>
         </article>
@@ -165,7 +167,8 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="far fa-heart"></i>
+              <i class="fas fa-heart animheartsolid"></i>
+              <i class="far fa-heart animheartregular"></i>
             </button>
           </div>
         </article>
