loader @ anim fade-in

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -41,7 +41,7 @@
     <section>
       <div class="page-restaurant-image">
         <img
-          src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
           alt="La palette du goût"
         />
       </div>
@@ -50,12 +50,13 @@
         <div class="menu__heading">
           <h2>À la française</h2>
           <button type="submit" class="button-like">
-            <i class="far fa-heart"></i>
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart animheartsolid"></i>
           </button>
         </div>
 
         <div class="menu__course__container">
-          <div class="course-list">
+          <div class="course-list fade-in--0delay">
             <h3 class="course-list__heading">Entrées</h3>
             <div class="course-card">
               <div class="course-card__info">
@@ -95,7 +96,7 @@
             </div>
           </div>
 
-          <div class="course-list">
+          <div class="course-list fade-in--1delay">
             <h3 class="course-list__heading">Plats</h3>
             <div class="course-card">
               <div class="course-card__info">
@@ -135,7 +136,7 @@
             </div>
           </div>
 
-          <div class="course-list">
+          <div class="course-list fade-in--2delay">
             <h3 class="course-list__heading">Desserts</h3>
             <div class="course-card">
               <div class="course-card__info">
@@ -195,7 +196,7 @@
       </a>
       <div class="footer__info">
         <a href="#">Mentions légales</a>
-        <a href="adressemailàtrouver">Contact</a>
+        <a href="mailto:contact@ohmyfood.fr">Contact</a>
       </div>
     </footer>
   </body>
