--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -41,7 +41,7 @@
     <section>
       <div class="page-restaurant-image">
         <img
-          src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+          src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
           alt="La palette du goût"
         />
       </div>
@@ -50,12 +50,13 @@
         <div class="menu__heading">
           <h2>La note enchantée</h2>
           <button type="submit" class="button-like">
-            <i class="far fa-heart"></i>
+            <i class="fa-regular fa-heart"></i>
+            <i class="fa-solid fa-heart animheartsolid"></i>
           </button>
         </div>
 
         <div class="menu__course__container">
-          <div class="course-list">
+          <div class="course-list fade-in--0delay">
             <h3 class="course-list__heading">Entrées</h3>
             <div class="course-card">
               <div class="course-card__info">
@@ -107,7 +108,7 @@
             </div>
           </div>
 
-          <div class="course-list">
+          <div class="course-list fade-in--1delay">
             <h3 class="course-list__heading">Plats</h3>
             <div class="course-card">
               <div class="course-card__info">
@@ -147,7 +148,7 @@
             </div>
           </div>
 
-          <div class="course-list">
+          <div class="course-list fade-in--2delay">
             <h3 class="course-list__heading">Desserts</h3>
             <div class="course-card">
               <div class="course-card__info">
@@ -188,9 +189,7 @@
           </div>
         </div>
         <div class="menu__button-order">
-          <button type="submit" class="button-gradient button-gradient--long">
-            Commander
-          </button>
+          <button type="submit" class="button-gradient">Commander</button>
         </div>
       </div>
     </section>
@@ -209,7 +208,7 @@
       </a>
       <div class="footer__info">
         <a href="#">Mentions légales</a>
-        <a href="adressemailàtrouver">Contact</a>
+        <a href="mailto:contact@ohmyfood.fr">Contact</a>
       </div>
     </footer>
   </body>
