--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
   </head>
 
   <body>
+    <!-- LOADER -->
+
+    <div class="loader">
+      <span class="loader-quart"></span>
+      <span class="letter">L</span>
+      <span class="letter">O</span>
+      <span class="letter">A</span>
+      <span class="letter">D</span>
+      <span class="letter">I</span>
+      <span class="letter">N</span>
+      <span class="letter">G</span>
+    </div>
+
     <!-- HEADER -->
 
     <header class="header">
@@ -98,13 +111,13 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="fas fa-heart animheartsolid"></i>
-              <i class="far fa-heart animheartregular"></i>
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart animheartsolid"></i>
             </button>
           </div>
         </article>
         <article class="restaurant-card">
-          <a href="la-note-enchantee.html">
+          <a href="la-note-enchantée.html">
             <div class="restaurant-card__image">
               <img
                 src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
@@ -123,8 +136,8 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="fas fa-heart animheartsolid"></i>
-              <i class="far fa-heart animheartregular"></i>
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart animheartsolid"></i>
             </button>
           </div>
         </article>
@@ -145,8 +158,8 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="fas fa-heart animheartsolid"></i>
-              <i class="far fa-heart animheartregular"></i>
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart animheartsolid"></i>
             </button>
           </div>
         </article>
@@ -167,8 +180,8 @@
           </a>
           <div class="restaurant-card__like">
             <button type="submit" class="button-like">
-              <i class="fas fa-heart animheartsolid"></i>
-              <i class="far fa-heart animheartregular"></i>
+              <i class="fa-regular fa-heart"></i>
+              <i class="fa-solid fa-heart animheartsolid"></i>
             </button>
           </div>
         </article>
@@ -189,7 +202,7 @@
       </a>
       <div class="footer__info">
         <a href="#">Mentions légales</a>
-        <a href="adressemailàtrouver">Contact</a>
+        <a href="mailto:contact@ohmyfood.fr">Contact</a>
       </div>
     </footer>
   </body>
