Anim loader + fade-in

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="menu__course__container">
-          <div class="course-list fade-in--0delay">
+          <div class="course-list fade-in--0delay fade-in--1delay">
             <h3 class="course-list__heading">Entrées</h3>
             <div class="course-card">
               <div class="course-card__info">
@@ -96,7 +96,7 @@
             </div>
           </div>
 
-          <div class="course-list fade-in--1delays">
+          <div class="course-list fade-in--2delays">
             <h3 class="course-list__heading">Plats</h3>
             <div class="course-card">
               <div class="course-card__info">
@@ -136,7 +136,7 @@
             </div>
           </div>
 
-          <div class="course-list fade-in--2delay">
+          <div class="course-list fade-in--3delay">
             <h3 class="course-list__heading">Desserts</h3>
             <div class="course-card">
               <div class="course-card__info">
