transposition css-scss

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -184,7 +184,7 @@
 
     <!-- FOOTER -->
 
-    <footer>
+    <footer class="footer">
       <h4 class="footer__heading">ohmyfood</h4>
       <a href="#" class="footer__nav">
         <i class="fas fa-utensils footer__nav__icons"></i>
