--- a/index.html
+++ b/index.html
@@ -21,21 +21,25 @@
       src="https://kit.fontawesome.com/df053594e0.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/styleindex.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
 
   <body>
     <!-- LOADER -->
 
     <div class="loader">
-      <span class="loader-quart"></span>
-      <span class="letter">L</span>
-      <span class="letter">O</span>
-      <span class="letter">A</span>
-      <span class="letter">D</span>
-      <span class="letter">I</span>
-      <span class="letter">N</span>
-      <span class="letter">G</span>
+      <div>
+        <span class="letter">L</span>
+        <span class="letter">O</span>
+        <span class="letter">A</span>
+        <span class="letter">D</span>
+        <span class="letter">I</span>
+        <span class="letter">N</span>
+        <span class="letter">G</span>
+      </div>
+      <div>
+        <span class="loader-quart"></span>
+      </div>
     </div>
 
     <!-- HEADER -->
@@ -190,7 +194,7 @@
 
     <!-- FOOTER -->
 
-    <footer>
+    <footer class="footer">
       <h4 class="footer__heading">ohmyfood</h4>
       <a href="#" class="footer__nav">
         <i class="fas fa-utensils footer__nav__icons"></i>
