--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -56,6 +56,8 @@
       </section>
       <section id="portfolio">
         <h2>Mes Projets</h2>
+        <!-- Bouton "Modifier" -->
+        <button id="edit-button">Modifier</button>
         <!-- <button id="all-categories">Tous</button> -->
         <!-- Menu de catégories -->
         <div class="categories-menu"></div>
@@ -74,6 +76,11 @@
           <input type="submit" value="Envoyer" />
         </form>
       </section>
+
+      <!-- Création de la modale -->
+      <div id="myModal" class="modal" style="display: none">
+        <div class="modal-content"></div>
+      </div>
     </main>
 
     <footer>
