Modale 2 = gallerie, style basique & fermeture de la modale

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,8 +16,26 @@
   </head>
 
   <body>
+    <!-- création de la modale -->
+    <aside id="modale" class="modale" aria-hidden="true">
+      <div class="modale-wrapper">
+        <button class="close-btn js-modale-close">
+          <i class="fas fa-xmark"></i>
+        </button>
+        <h2>Galerie photo</h2>
+        <div class="gallery js-admin-projets">
+          <!-- génération des photos de manière dynamique -->
+        </div>
+        <hr class="separator"></hr>
+        <button class="add-photo-btn js-modale-projet">
+          Ajouter une photo
+        </button>
+      </div>
+    </aside>
+
     <!-- Conteneur de la navbar créée dynamiquement -->
     <div id="navbarContainer"></div>
+
     <header>
       <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
       <nav>
@@ -54,11 +72,10 @@
           </p>
         </article>
       </section>
+
       <section id="portfolio">
         <h2>Mes Projets</h2>
-        <!-- Bouton "Modifier" -->
-        <button id="edit-button">Modifier</button>
-        <!-- <button id="all-categories">Tous</button> -->
+
         <!-- Menu de catégories -->
         <div class="categories-menu"></div>
         <div class="gallery"></div>
@@ -76,11 +93,6 @@
           <input type="submit" value="Envoyer" />
         </form>
       </section>
-
-      <!-- Création de la modale -->
-      <div id="myModal" class="modal" style="display: none">
-        <div class="modal-content"></div>
-      </div>
     </main>
 
     <footer>
