--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,10 +12,12 @@
     />
     <meta name="description" content="" />
     <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <script src="main.js" defer></script>
   </head>
 
   <body>
+
     <!-- création de la modale -->
     <aside id="modale" class="modale" aria-hidden="true">
       <div class="modale-wrapper">
@@ -23,7 +25,7 @@
           <i class="fas fa-xmark"></i>
         </button>
         <h2>Galerie photo</h2>
-        <div class="gallery js-admin-projets">
+        <div class="galleryMod js-admin-projets">
           <!-- génération des photos de manière dynamique -->
         </div>
         <hr class="separator"></hr>
@@ -76,10 +78,13 @@
       <section id="portfolio">
         <h2>Mes Projets</h2>
 
-        <!-- Menu de catégories -->
+        <!-- Filtres par catégories -->
         <div class="categories-menu"></div>
+        <!-- Affichage de la galerie de la page d'accueil -->
         <div class="gallery"></div>
+
       </section>
+
       <section id="contact">
         <h2>Contact</h2>
         <p>Vous avez un projet ? Discutons-en !</p>
