Bouton fermeture modale2 et fermeture en dehors de la modale2

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,12 +21,12 @@
     <!-- création de la structure modale vue "galerie photos" -->
     <aside id="modale" class="modale" aria-hidden="true">
       <div class="modale-wrapper">
-        <button class="close-btn js-modale-close">
+        <button class="close-btn js-modale1-close">
           <i class="fas fa-xmark"></i>
         </button>
         <!-- Partie spécifique de la vue "galerie photos" -->
         <h2 class="ModaleTitleGallery">Galerie photo</h2>
-        <div class="galleryMod js-admin-projets">
+        <div class="galleryMod js-admin-projet">
           <!-- génération des photos de manière dynamique -->
         </div>
         <hr class="separator"></hr>
@@ -43,7 +43,7 @@
         <a href="" class = "js-modale-return">
           <i class = "fa-solid fa-arrow-left"></i>
         </a>
-        <button class="close-btn js-modale-close">
+        <button class="close-btn js-modale2-close">
           <i class="fas fa-xmark"></i>
         </button>
         <!-- Partie spécifique de la vue "ajout photo" -->
