Ajout de la partie gestion dynamique de la modale 2 / input

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -64,7 +64,7 @@
           </div>
         </form>
         <hr class="separator"></hr>
-        <button class="add-photo-btn js-modale-projet">
+        <button class="add-photo-btn js-modale2-projet">
           Valider
         </button>
       </div>
