Ajout boutonlogin et logout en mode édition + preview fileReader + bouton retour modale2

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -53,6 +53,8 @@
             <i class="fa-regular fa-image"></i>
             <label for="photoUrl">+ Ajouter une photo:</label>
             <input type="file" id="photoUrl" name="photoUrl" accept="image/png, image/gif, image/jpeg" class="js-image" required >
+            <img id="photoPreview" src="#" alt="Photo Preview">
+            <!-- <img> ajoutée pour visualiser l'aperçu de l'image téléchargée -->
           </div>
           <div class="form-group-title">
             <label for="photoTitle">Titre</label>
@@ -80,7 +82,7 @@
         <ul>
           <li>projets</li>
           <li>contact</li>
-          <li>login</li>
+          <li><a href="file:///Users/nicolasmeyer/Desktop/Meyer_Nicolas_6_ArchitecteBluel_052024%20/FrontEnd/login.html" id="authLink">Login</a></li>
           <li><img src="./assets/icons/instagram.png" alt="Instagram" /></li>
         </ul>
       </nav>
