--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -35,7 +35,7 @@
           <input type="email" name="email" id="email" required />
           <label for="password">Mot de passe</label>
           <input type="password" name="password" id="password" required />
-          <input type="submit" value="Se connecter" id="submit" />
+          <button class="send-button">Se connecter</button>
           <p id="error-message"></p>
           <a href="">Mot de passe oublié</a>
         </form>
@@ -44,7 +44,7 @@
     <footer>
       <nav>
         <ul>
-          <li>Mentions Légales</li>
+          <li>Mentions légales</li>
         </ul>
       </nav>
     </footer>
