Finalisation, format img modale1 et page d'accueil + message d'erreur modale2

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -68,6 +68,7 @@
             </select>
           </div>
         </form>
+        <p id="error-message2"></p>
         <hr class="separator"></hr>
         <button class="add-photo-btn js-modale2-projet">
           Valider
